; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4state.c_nfs4_has_reclaimed_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4state.c_nfs4_has_reclaimed_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_client = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs4_has_reclaimed_state(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.nfs4_client*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @clientstr_hashval(i8* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call %struct.nfs4_client* @find_confirmed_client_by_str(i8* %9, i32 %10, i32 %11)
  store %struct.nfs4_client* %12, %struct.nfs4_client** %6, align 8
  %13 = load %struct.nfs4_client*, %struct.nfs4_client** %6, align 8
  %14 = icmp ne %struct.nfs4_client* %13, null
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i32 1, i32 0
  ret i32 %16
}

declare dso_local i32 @clientstr_hashval(i8*) #1

declare dso_local %struct.nfs4_client* @find_confirmed_client_by_str(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
